# news-flow-system

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  SETUP_NEWS_FLOW.md  docker-compose.yml
alerts_manager/: Dockerfile  execution_config.py  main.py  requirements.txt
collector/: README.md
docs/: FK_RESOLUTION_WITH_PENDENCY_CHECK.md
inserter-updater/: README.md  limpar_teste_esfinge.sql  limpar_teste_simples.sql  main.py  requirements.txt
post_flow/grouper-nfe/groupers/grouper-medicamentos/: .gitignore  README.md  config.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
post_flow/grouper-nfe/groupers/grouper-medicamentos/prompt-templates/: prompt.txt
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/: constants.py
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/NER/: ner.py
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/data_processing/: data_cleaning.py  data_load.py  text_preprocessor.py
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/heuristics/: match_2_numbers.py  structured_data.py
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/llm_linking/: inference.py
post_flow/grouper-nfe/groupers/grouper-medicamentos/src/utils/: get_config.py  load_save_data.py
quality-checker/: README.md  main.py  main_nova.py  requirements.txt
service_essentials/: .gitignore  README.md  requirements.txt
tools/: esfinge_viewer.html
triggers/: .gitignore  README.md  config.yaml  noticias.json  requirements.txt  trigger-alertas.py  trigger-collect-all.py  trigger-dom.py  trigger-epublica.py  (+5 more)
(+684 files in other folders)
